2008-05-04  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/about/why.wml: fix link to sysadmin guide

2008-04-24  Karsten Bräckelmann  <guenther@rudersport.de>

	* www.gnome.org/projects/garnome/index.html: Two point twentythree
	unstable cycle...

2008-04-21  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/index.html: 
	  release date was wrong

2008-04-21  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
	  www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/tour.html: 
	  add cheese 2.23.1

2008-04-15  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/index.wml: typo

2008-04-15  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/index.wml: add GNOME.Asia summit announce

2008-04-14  Ricky Zhou  <ricky.zhou@gmail.com>

	* www.gnome.org/projects/evolution/features.shtml: Update link to Planner,
	as mentioned at
	http://mail.gnome.org/archives/gnome-web-list/2008-April/msg00009.html

2008-04-13  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/themes/cheese/document.all.css,
	  www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
	  www.gnome.org/projects/cheese/tour.html: 
	  small css changes on the cheese page

2008-04-08  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html: 
	  add the cheese 2.22.1 release

2008-04-06  Dave Neary <bolsh@gnome.org>

	* www.gnome.org/press/releases/2008-04-mobilesummit.wml:
	* www.gnome.org/press/releases/Makefile.am:
	* www.gnome.org/press/releases/index.wml: add press release about
	GNOME Mobile summit in Austin next week.

2008-03-04  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/projects/outreach/a11y/index.wml: add line break on
	news entry.

2008-03-04  Vincent Untz  <vuntz@gnome.org>
