@@ -135,6 +135,23 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>May 12th 2008</h3>
+          <p>
+          Unstable verson 2.23.2 was released!
+          New features since previous version include:
+          </p>
+          <ul>
+            <li>a new, shiny countdown widget</li>
+            <li>use of xdg for storing pictures and videos</li>
+            <li>new naming for pictures and videos</li>
+            <li>add support for nautilus sendto</li>
+            <li>add a preference dialog with resolution changing</li>
+            <li>fixed a lot of crashers</li>
+            <li>added/updated translations</li>
+          </ul>
+          <a href="download.html">Download it</a>
+          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-May/msg00022.html">full release notes</a>)
+
           <h3>April 21st 2008</h3>
           <p>
           Unstable verson 2.23.1 was released!
@@ -166,20 +183,6 @@
           </ul>
           <a href="download.html">Download it</a>
           (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-April/msg00026.html">full release notes</a>)
-
-          <h3>April 1st 2008</h3>
-          <p>
-            <a href="http://home.cs.tum.edu/~siegel/news/2008_04_01-bye_bye_cheese">April fool's joke?</a><br/>
-            <a href="http://home.cs.tum.edu/~siegel/news/2008_04_02-about_that_april_fools_joke">Yes!</a>
-          </p>
-
-          <h3>March 11th 2008</h3>
-          <p>
-          <a href="tour.html">Check out the brand new Cheese Tour!</a> We tried
-          to cover all features of Cheese and present them to you in a nice
-          way, such that you get a quick overview of Cheese.
-
-          </p>
 
         </div>
       </div><!-- bottom -->
