@@ -1,3 +1,9 @@
+2008-05-13  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html: 
+	  add the cheese 2.23.2 release
+
 2008-05-04  Vincent Untz  <vuntz@gnome.org>
 
 	* www.gnome.org/about/why.wml: fix link to sysadmin guide
